# GPUCollisionDetectionWithAS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ExternalLib/: CMakeLists.txt
ExternalLib/CSV_WRITER/: main.cpp
ExternalLib/VULKAN_MEMORY_ALLOCATOR/VulkanMemoryAllocator/include/: vk_mem_alloc.h
Resources/Models/Spot/Model/: material.mtl
Resources/Models/SunTemple/Model/: material.mtl
Resources/Scripts/: ComputeTImings.py  ParticleTimings.py  Particles.py  VectorField.py
Resources/Shader/: GlobalValues.glsl  brdf.glsl  compile_compute_shader.bat  compile_compute_shader_imm.bat  compile_render_shader.bat  depth_peeling.frag  depth_peeling.vert  depth_peeling_fill_and_sort.frag  depth_peeling_fill_and_sort.vert  global_voxel_grid_gen.comp  particle_integration.comp  particle_simulation.comp  path_trace.rchit  path_trace.rgen  path_trace.rmiss  path_trace.transparent.rahit  physics_collision.comp  physics_update_model_matrix.comp  quaternion.glsl  render_common.glsl  render_geometry.frag  render_geometry.vert  render_particle.frag  render_particle.geom  render_particle.vert  render_shading.frag  render_shading.vert  rt_common.glsl  shader.frag  shader.vert  voxel_integration.comp
Resources/Shader/log/: render_geometry.vert.log.txt
Src/: App.cpp  Camera.cpp  Config.cpp  DescriptorSetManager.cpp  Main.cpp  Scene.cpp  Window.cpp
Src/framework/descriptors/: DescriptorSet.cpp
Src/framework/memory/: Allocator.cpp  ResourceManager.cpp  ResourcePool.cpp
Src/framework/model/: AsManager.cpp  DrawGeom.cpp  DrawInst.cpp  DrawSurf.cpp  MaterialManager.cpp  MaterialTextureManager.cpp  Model.cpp  ObjLoader.cpp
Src/framework/physics/: ClassicPhysics.cpp  CollisionComputeStage.cpp  GlobalVoxelGridGenStage.cpp  ModelMatrixComputeStage.cpp  RtPhysics.cpp  VoxelIntegrationStage.cpp
Src/framework/pipeline/: ColorAttachment.cpp  DepthAttachment.cpp  InputAttachment.cpp
Src/framework/utility/: host_timer.cpp
Src/particle/: ComputeParticles.cpp  ComputeTimingTester.cpp  FileWriter.cpp  Particles.cpp
Src/particle/vector_field/: VectorField.cpp
Src/particle/vector_field/movement_strategies/: Explosion.cpp  NoMovement.cpp  RotationMovement.cpp  TranslationMovement.cpp
Src/renderer/: DeferredPipeline.cpp  DepthPeeling.cpp  RenderSystem.cpp
Src/renderer/render_stages/: DeferredGeometryRenderStage.cpp  DeferredShadingRenderStage.cpp  DepthPeelingSortAndFill.cpp  ImGuiRenderStage.cpp  PPLLRenderStage.cpp  ParticleRenderStage.cpp  PathTraceRenderStage.cpp
include/: App.h  Common.h  Config.h  Context.h  DescriptorSetManager.h  Scene.h  SceneLoadInfo.h  Window.h
include/framework/descriptors/: DescriptorSet.h  DescriptorSetLayoutDefinitions.h
include/framework/memory/: Allocator.h  ResourceManager.h  ResourcePool.h  Resources.h
include/framework/model/: AsManager.h  DrawGeom.h  DrawInst.h  DrawSurf.h  MaterialManager.h  MaterialTextureManager.h  Model.h  ObjLoader.h  Vertex.h
include/framework/physics/: ClassicPhysics.h  CollisionComputeStage.h  ComputeParams.h  GlobalVoxelGridGenStage.h  ModelMatrixComputeStage.h  RtPhysics.h  VoxelIntegrationStage.h
include/framework/pipeline/: ColorAttachment.h  ComputeStage.h  DepthAttachment.h  InputAttachment.h  RasterizationStage.h  RayTraceStage.h  RenderAttachment.h  RenderStage.h  Subpass.h
include/framework/utility/: CommonUtility.h  PipelineToolKit.h  RtUtility.h  Utilities.h  host_timer.h
include/particle/: ComputeParticles.h  ComputeTimingTester.h  FileWriter.h  Particles.h  SetsAndBindings.h
include/particle/vector_field/: VectorField.h
include/particle/vector_field/movement_strategies/: Explosion.h  MovementStrategy.h  NoMovement.h  RotationMovement.h  TranslationMovement.h
include/renderer/: DeferredPipeline.h  DepthPeeling.h  DrawParams.h  RenderAttachmentInfo.h  RenderSystem.h  ShaderStructs.h
include/renderer/render_stages/: DeferredGeometryRenderStage.h  DeferredGeometrySubpass.h  DeferredParticleSubpass.h  DeferredShadingRenderStage.h  DeferredShadingSubpass.h  DepthPeelingSortAndFill.h  DepthPeelingSortAndFillSubpass.h  ImGuiRenderStage.h  ImGuiSubpass.h  PPLLRenderStage.h  PPLLRenderStageSubpass.h  ParticleRenderStage.h  PathTraceRenderStage.h
